--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -172,7 +172,7 @@ body {
 }
 
 .footer {
-  background-color: #333;
+  background-color: #000000;
   color: #fff;
   padding: 40px 10%;
   margin-top: 50px;
@@ -228,6 +228,7 @@ body {
   font-size: 1.2rem;
   margin-bottom: 10px;
   margin-left: 150px;
+  cursor: pointer;
 }
 
 .footer-bottom {
