--- a/(FE)/css/Landingpage1.css
+++ b/(FE)/css/Landingpage1.css
@@ -44,9 +44,10 @@
   .navbar-center {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     flex: 1;
-    gap: 50px;
+    gap: 100px;
+    margin-right: 100px;
   }
 
   .navbar-center a {
@@ -54,7 +55,7 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 1rem;
-    transition: color 0.3s;
+    transition: color 0.2s;
   }
   
   .navbar-center a:hover {
@@ -222,41 +223,62 @@
   }
 
   .footer {
+    width: 100%;
+    height: 300px;
     background-color: #333;
     color: #fff;
-    padding: 40px 10%;
-    margin-top: 50px;
+    padding: 0px;
+    margin-top: 40px;
   }
 
   .footer-container {
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
-    gap: 30px;
   }
 
-  .footer-about h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    margin-left: 50px;
+  .footer-links{
+    margin-left: 20px;
+    margin-top: 50px;
   }
 
   .footer-links h3{
     font-size: 1.2rem;
-    margin-bottom: 10px;
     text-align: left;
+    margin-bottom: 10px;    
   }
 
   .footer-links ul {
     list-style-type: none;
-    padding: 0;
-  }
-
-  .footer-links ul li {
-    margin-bottom: 5px; 
+    padding: 10px;
+    background-color: #02a142;
+    margin-top: 30px;
   }
 
   .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .footer-links a{
+    margin-top: 20px;
+  }
+
+  .footer-service h3{
+    font-size: 1.2rem;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+
+  .footer-service ul{
+    list-style-type: none;
+    background-color: #02a142;
+    padding: 10px;
+  }
+
+  .footer-service ul li a {
     color: #ccc;
     text-decoration: double;
     font-size: 1rem;
@@ -265,13 +287,10 @@
     margin-bottom: 5px;
   }
 
-  .footer-links a{
-    margin-left: 25px;
-  }
-
   .footer-social .social-icons {
     display: flex;
-    gap: 20px;
+    gap: 10px;
+    margin-left: 100px;
   }
 
   .footer-social h4{
@@ -281,8 +300,9 @@
   }
 
   .footer-bottom {
+    position: absolute;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 100px;
     font-size: 0.9rem;
     color: #aaa;
   }
