--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -19,6 +19,7 @@ body {
     background-color: #fff;
     border-bottom: 3px solid #ddd;
   }
+  
 .logo {
   height: 50px; 
   margin-right: 10px;
@@ -195,19 +196,18 @@ body {
 .footer-container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   gap: 10px;
 }
 
 .footer-about h3 {
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: 50px;
 }
 
 .footer-links h3{
   font-size: 1.2rem;
-  margin-bottom: 10px;
+  margin-bottom: 20Px;
   text-align: left;
 }
 
@@ -235,19 +235,20 @@ body {
 
 .footer-social .social-icons {
   display: flex;
+  align-items: flex-end;
   gap: 20px;
 }
 
 .footer-social h4{
   font-size: 1.2rem;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: 150px;
-  cursor: pointer;
 }
 
 .footer-bottom {
-  text-align: center;
-  margin-top: 20px;
+  align-items: flex-start;
+  text-align:justify;
+  margin-top: 100px;
   font-size: 0.9rem;
   color: #aaa;
 }
