--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Times New Roman', Times, serif, sans-serif;
-  color: rgb(51, 51, 51);
+  font-family: Arial, sans-serif;
+  font-size: 12px;
 }
 
 .navbar {
@@ -12,71 +12,31 @@
   justify-content: space-between;
   padding: 10px 20px;
   background-color: #fff;
-}
-
-.navbar-left {
-  display: flex;
-  align-items: center;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.menu-icon {
-  width: 24px;
-  height: 24px;
-  margin-right: 15px;
-  cursor: pointer;
+  border-bottom: 3px solid #ddd;
 }
 
 .logo {
-  width: 50px;
   height: 50px;
   margin-right: 10px;
-  display: flex;
-  flex-direction: row;
   justify-content: center;
 }
 
 .site-name {
+  flex-grow: 1;
+  font-size: 20px; 
   font-weight: bold;
-  font-size: 1.5rem;
-  color: #000;
+  font-style: italic; 
+  line-height: 1.2; 
+  margin: 0; 
 }
   
-.search-box {
-  width: 600px;
-  padding: 8px 12px;
-  border-radius: 20px;
-  border: 1px solid #ddd;
-  background-color: #f0e6f6;
-  color: #333;
-  margin-left: 50px;
-}
-
-.navbar-right {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.profile {
-  width: 65px;
-  border-radius: 25px;
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.title{
-  margin-top: 5px;
-  margin-bottom: 5px;
-  color: #827f7f;
-}
-
-.favorite-icon, .search-icon {
-  width: 24px;
-  height: 24px;
+.menu-button {
+  font-size: 16px;
+  border: none;
+  background: none;
   cursor: pointer;
-  margin-right: 150px;
+  margin-left: 50px;
+  margin-right: 40px;
 }
 
 .main-section {
@@ -86,7 +46,7 @@
   align-items: flex-start;
   justify-content: center;
   height: 90vh;
-  background-color: #9a68aa;
+  background-color: #ffffff;
   color: #fff;
   padding-left: 60px;
 }
@@ -108,7 +68,7 @@
   border-width: 1px;
   background-color: rgb(255, 255, 255);
   border-style: solid;
-  border-color: rgb(255, 255, 255);
+  border-color: rgb(213, 212, 212);
   border-radius: 20px;
   text-align:justify;
   margin-top: 20px;
