--- a/(FE)/css/userpage.css
+++ b/(FE)/css/userpage.css
@@ -131,3 +131,104 @@ body {
     height: 16px;
     cursor: pointer;
   }
+
+  .footer {
+    width: 100%;
+    height: 300px;
+    background-color: #333;
+    color: #fff;
+    margin-top: 40px;
+  }
+
+  .footer-container {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .footer-links{
+    margin-left: 40px;
+    margin-top: 50px;
+  }
+
+  .footer-links h3{
+    font-size: 1.2rem;
+    text-align: left;
+    margin-bottom: 10px;    
+  }
+
+  .footer-links ul {
+    list-style-type: none;
+    margin-top: 30px;
+  }
+
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .footer-links a{
+    margin-top: 20px;
+  }
+
+  .footer-service{
+    margin-top: 50px;
+    margin-left: 150px;
+  }
+
+  .footer-service h3{
+    font-size: 1.2rem;
+    text-align: left;
+  }
+
+  .footer-service ul{
+    list-style-type: none;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .footer-service ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .footer-social .social-icons {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin-top: 30px;
+    margin-left: 400px;
+    cursor: pointer;
+  }
+
+  .facebook{
+    margin-left: 50px;
+  }
+
+  .instagram{
+    margin-left: 50px;
+  }
+
+  .envelope{
+    margin-left: 50px;
+  }
+
+  .footer-social h4{
+    font-size: 1.2rem;
+    margin-top: 50px;
+    margin-left: 550px;
+  }
+
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #aaa;
+    margin-top: 70px;
+    margin-left: 30px;
+  }
