--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -36,106 +36,102 @@
   background: none;
   cursor: pointer;
   margin-left: 50px;
-  margin-right: 40px;
+  margin-right: 50px;
 }
 
-.main-section {
-  font-family: 'Roboto', sans-serif;
+.content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 90vh;
-  background-color: #ffffff;
-  color: #fff;
-  padding-left: 60px;
+  padding: 80px;
 }
 
-.main-section h1 {
-  font-size: 7rem;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #fff;
-  text-transform: uppercase;
-  text-shadow: 10px 10px #5A4B6E;
-  line-height: 1,1;
-}
-
-.box{
+.box {
   display: flex;
-  width: 1000px;
-  height: 450px;
-  border-width: 1px;
-  background-color: rgb(255, 255, 255);
-  border-style: solid;
-  border-color: rgb(213, 212, 212);
-  border-radius: 20px;
-  text-align:justify;
-  margin-top: 20px;
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-bottom: 20px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
+  width: 1300px; 
 }
 
-.pic{
-  width: 350px;
-  margin-right: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.pic {
+  width: 450px;
+  height: 550px;
+  margin-right: 20px;
+  border-radius: 8px; 
 }
 
 .product {
-  text-align: center;
-  margin-bottom: 200px;
-  margin-left: 20px;
-}
-.product-name{
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 50px;
+  width: 500px;
+}
+
+.product-name {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 25px;
   color: #000000;
-  margin-bottom: 5px;
 }
 
-.price{
-  display: flex;
+.price {
   font-weight: 700;
-  font-size: 40px;
+  color: #000000;
+  font-size: 24px;
 }
 
-.box-body{
+.rating {
   display: flex;
-  width: 500px;
-  height: 200px;
-  border-width: 3px;
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-radius: 20px;
-  text-align:justify;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  align-items: center;
+  gap: 4px;
+  font-size: 14px;
+  color: #333;
 }
 
- .text{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+.rating-value {
+  font-size: 14px;
+  font-weight: 500;
+  color: #000;
+}
 
- }
+.stars {
+  color: #FFD700; 
+  font-size: 14px;
+}
 
- .back { background-color:  #5A4B6E;
+.review-count {
+  font-size: 12px;
+  color: #888;
+}
+
+.viewer {
+  font-size: 12px;
+  color: #888;
+  margin-top: 4px;
+}
+
+.box-body {
+  border: 1px solid #000;
+  border-radius: 8px;
+  padding: 15px;
+  margin-top: 15px;
+  width: 750px;
+  height: 400px; 
+}
+
+.text {
+  font-size: 14px;
+  color: #818181;
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin: 15px 300px;
+}
+
+.back { background-color:  #B384CE;
   font-family: 'Roboto', sans-serif;
   color: #ffffff;
-  width: 150px;
+  width: 200px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
@@ -160,7 +156,7 @@
 .whatsapp{ background-color: rgb(7, 196, 76);
   font-family: 'Roboto', sans-serif;
   color: rgb(255, 255, 255);
-  width: 150px;
+  width: 200px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
@@ -169,5 +165,222 @@
   padding-top: 10px;
   padding-bottom: 10px;
   margin-left: 10px;
-  margin-right: -165px;
+  margin-right: -430px;
+  }
+
+  .review {
+    flex-direction: row;
+    width: 700px;
+    padding: 20px;
+    background-color: #fff;
+    margin-top: 50px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    gap: 4px;
+    margin-top: 50px;
+    color: #333;
+}
+
+.rating-box {
+  width: 240px;
+  float: left;
+  text-align: center;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #333;
+  padding: 25px;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+}
+
+.overall-rating {
+  display: flex;
+  align-items: baseline;
+  font-size: 40px;
+  color: #000;
+  margin-bottom: 10px;
+}
+
+.star-point {
+  color: #FFD700; 
+  font-size: 40px;
+  width: 50px;
+  margin-right: 5px;
+}
+.star {
+  color: #FFD700; /* Gold color for stars */
+  width: 30px;
+  margin-right: 5px;
+}
+
+.rating-number {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.out-of {
+  font-size: 20px;
+  color: #888;
+  margin-left: 2px;
+}
+
+.rating-satisfaction {
+  font-size: 14px;
+  color: #333;
+  margin: 5px 0;
+}
+
+.rating-count {
+  font-size: 12px;
+  color: #666;
+  margin-bottom: 15px;
+}
+
+.rating-distribution {
+  font-size: 12px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.rating-distribution p {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 5px 0;
+}
+
+.bar {
+  flex: 1;
+  height: 5px;
+  background-color: #ddd;
+  margin: 0 8px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.filled-bar {
+  height: 100%;
+  background-color: #B384CE; /* Customize color as needed */
+}
+
+.rating-classification {
+  font-size: 14px;
+  color: #000;
+  margin-top: 15px;
+}
+
+.rating-classification p {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.rating-classification label {
+  font-size: 14px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+input[type="checkbox"] {
+  margin-right: 5px;
+}
+.user-experience {
+  width: 350px;
+  margin-left: 20px;
+}
+
+.user-review {
+  border-top: 1px solid #ddd;
+  padding: 10px 0;
+}
+
+.user-review:first-child {
+  border-top: none;
+}
+
+.user-stars {
+  font-size: 16px;
+  color: #FFD700; /* Star color */
+  margin-bottom: 5px;
+}
+
+.username {
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
+
+.variant, .comment {
+  font-size: 14px;
+  color: #666;
+  margin: 2px 0;
+}
+
+  .footer {
+    background-color: #1A1A1A;
+    color: #fff;
+    padding: 30px 10%;
+    margin-top: 50px;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  
+  .footer-about h3 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    margin-left: 20px;
+  }
+  
+  .footer-links h3{
+    font-size: 1.2rem;
+    margin-bottom: 20Px;
+    text-align: left;
+  }
+  
+  .footer-links ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .footer-links ul li {
+    margin-bottom: 5px; 
+  }
+  
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+    margin-bottom: 5px;
+  }
+  
+  .footer-links a{
+    margin: 0;
+  }
+  
+  .footer-social .social-icons {
+    display: flex;
+    align-items: flex-end;
+    gap: 20px;
+  }
+  
+  .footer-social h4{
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    margin-left: 150px;
+  }
+  
+  .footer-bottom {
+    align-items: flex-start;
+    text-align:justify;
+    margin-top: 100px;
+    font-size: 0.9rem;
+    color: #aaa;
   }
