--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -2,8 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
-  font-size: 12px;
+  font-family: 'Times New Roman', Times, serif, sans-serif;
 }
 
 .navbar {
@@ -15,10 +14,15 @@
   border-bottom: 3px solid #ddd;
 }
 
+.navbar-left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 .logo {
-  height: 50px;
-  margin-right: 10px;
-  justify-content: center;
+  width: 40px;
+  height: auto;
 }
 
 .site-name {
@@ -30,13 +34,25 @@
   margin: 0; 
 }
   
-.menu-button {
-  font-size: 16px;
-  border: none;
-  background: none;
-  cursor: pointer;
-  margin-left: 50px;
-  margin-right: 50px;
+.navbar-center {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  flex: 1;
+  gap: 100px;
+  margin-right: 100px;
+}
+
+.navbar-center a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: color 0.2s;
+}
+
+.navbar-center a:hover {
+  color: #6F4B9B;
 }
 
 .content {
@@ -52,7 +68,7 @@
 
 .pic {
   width: 450px;
-  height: 550px;
+  height: 520px;
   margin-right: 20px;
   border-radius: 8px; 
 }
