--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -27,7 +27,6 @@ body {
   display: flex;
   align-items: center;
   gap: 15px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .logo {
@@ -36,9 +35,12 @@ body {
 }
 
 .site-name {
+  flex-grow: 1;
+  font-size: 20px; 
   font-weight: bold;
-  font-size: 1.5rem;
-  color: #000;
+  font-style: italic; 
+  line-height: 1.2; 
+  margin: 0; 
 }
 
 .navbar-center {
@@ -80,11 +82,11 @@ body {
 
 .login-line {
   flex-direction: row;
-  width: 60px;
-  height: 2px;
+  width: 40px;
+  height: 3px;
   background-color: #B384CE;
   margin-right: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   align-self: center;
 }
 .left-section h2 {
@@ -92,8 +94,8 @@ body {
   font-size: 15px;
   font-weight: normal;
   color: rgb(0, 0, 0);
-  line-height: 1.1;
-  margin-left: 65px;
+  line-height: 2.7;
+  margin-left: 50px;
   top: 163px;
 }
 
@@ -201,7 +203,7 @@ body {
   width: 0.5px;
   height: 80px;
   background-color: #928B8B;
-  margin: 0px 14px;
+  margin: 0px 7px;
   align-self: center;
 }
 
