--- a/(FE)/css/homepage2.css
+++ b/(FE)/css/homepage2.css
@@ -177,10 +177,11 @@
 
   .footer-social .social-icons {
     display: flex;
+    position: absolute;
     align-items: flex-start;
     gap: 10px;
     margin-top: 30px;
-    margin-left: 400px;
+    margin-left: 350px;
     cursor: pointer;
   }
 
