--- a/(FE)/css/homepage2.css
+++ b/(FE)/css/homepage2.css
@@ -1,213 +1,213 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif, sans-serif;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif, sans-serif;
+}
 
-  html {
-    scroll-behavior: smooth;
-  }
+html {
+  scroll-behavior: smooth;
+}
 
-  body {
-    overflow-y: auto;
-    background-color: #ffffff;
-  }
-  
-  .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #fff;
-    position: relative;
-  }
-  
-  .navbar-left {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  .logo {
-    width: 40px;
-    height: auto;
-  }
-  
-  .site-name {
-    font-weight: bold;
-    font-size: 1.5rem;
-    color: #000;
-  }
-  
-  .navbar-center {
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    flex: 1;
-    gap: 100px;
-    margin-right: 100px;
-  }
+body {
+  overflow-y: auto;
+  background-color: #ffffff;
+}
 
-  .navbar-center a {
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 1rem;
-    transition: color 0.2s;
-  }
-  
-  .navbar-center a:hover {
-    color: #6F4B9B;
-  }
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #fff;
+  position: relative;
+}
 
-  .product-card {
-    display: inline-block;
-    max-width: 345px;
-    width: 100%;
-    max-height: 400px;
-    height: 100%;
-    background-color: #fff;
-    padding: 5px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-    border: 2px solid #ddd;
-    cursor: pointer;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 5px;
-  }
+.navbar-left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 
-  .product-card img{
-    position: relative;
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    background-color: #aaa;
-  }
+.logo {
+  width: 40px;
+  height: auto;
+}
 
-  .heart{
-    position: absolute;
-    display: flex;
-    cursor: pointer;
-    width: 20px;
-    height: auto;
-    margin-top: 5px;
-    margin-left: 5px;
-  }
+.site-name {
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #000;
+}
 
-  .product-card h2 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
+.navbar-center {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  flex: 1;
+  gap: 100px;
+  margin-right: 100px;
+}
 
-  .product-card p {
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #000000;
-  }
+.navbar-center a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: color 0.2s;
+}
 
-  .footer {
-    width: 100%;
-    height: 300px;
-    background-color: #333;
-    color: #fff;
-    margin-top: 40px;
-  }
+.navbar-center a:hover {
+  color: #6F4B9B;
+}
 
-  .footer-container {
-    display: flex;
-    align-items: flex-start;
-  }
+.product-card {
+  display: inline-block;
+  max-width: 345px;
+  width: 100%;
+  max-height: 400px;
+  height: 100%;
+  background-color: #fff;
+  padding: 5px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #ddd;
+  cursor: pointer;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 5px;
+}
 
-  .footer-links{
-    margin-left: 40px;
-    margin-top: 50px;
-  }
+.product{
+  position: relative;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  background-color: #aaa;
+}
 
-  .footer-links h3{
-    font-size: 1.2rem;
-    text-align: left;
-    margin-bottom: 10px;    
-  }
+.heart{
+  position: absolute;
+  display: flex;
+  cursor: pointer;
+  width: 20px;
+  height: auto;
+  fill: red;
+  margin-top: 5px;
+  margin-left: 5px;
+}
 
-  .footer-links ul {
-    list-style-type: none;
-    margin-top: 30px;
-  }
+.product-card h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
 
-  .footer-links ul li a {
-    color: #ccc;
-    text-decoration: double;
-    font-size: 1.1rem;
-    transition: color 0.3s ease;
-    cursor: pointer;
-  }
+.product-card p {
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #000000;
+}
 
-  .footer-links a{
-    margin-top: 20px;
-  }
+.footer {
+  width: 100%;
+  height: 300px;
+  background-color: #333;
+  color: #fff;
+  margin-top: 40px;
+}
 
-  .footer-service{
-    margin-top: 50px;
-    margin-left: 150px;
-  }
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+}
 
-  .footer-service h3{
-    font-size: 1.2rem;
-    text-align: left;
-  }
+.footer-links{
+  margin-left: 40px;
+  margin-top: 50px;
+}
 
-  .footer-service ul{
-    list-style-type: none;
-    padding: 10px;
-    margin-top: 30px;
-  }
+.footer-links h3{
+  font-size: 1.2rem;
+  text-align: left;
+  margin-bottom: 10px;    
+}
 
-  .footer-service ul li a {
-    color: #ccc;
-    text-decoration: double;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-    cursor: pointer;
-  }
+.footer-links ul {
+  list-style-type: none;
+  margin-top: 30px;
+}
 
-  .footer-social .social-icons {
-    display: flex;
-    position: absolute;
-    align-items: flex-start;
-    gap: 10px;
-    margin-top: 30px;
-    margin-left: 350px;
-    cursor: pointer;
-  }
+.footer-links ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
 
-  .facebook{
-    margin-left: 50px;
-  }
+.footer-links a{
+  margin-top: 20px;
+}
 
-  .instagram{
-    margin-left: 50px;
-  }
+.footer-service{
+  margin-top: 50px;
+  margin-left: 150px;
+}
 
-  .envelope{
-    margin-left: 50px;
-  }
+.footer-service h3{
+  font-size: 1.2rem;
+  text-align: left;
+}
 
-  .footer-social h4{
-    font-size: 1.2rem;
-    margin-top: 50px;
-    margin-left: 550px;
-  }
+.footer-service ul{
+  list-style-type: none;
+  padding: 10px;
+  margin-top: 30px;
+}
 
-  .footer-bottom {
-    position: absolute;
-    text-align: center;
-    font-size: 0.9rem;
-    color: #aaa;
-    margin-top: 70px;
-    margin-left: 30px;
-  }
+.footer-service ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-social .social-icons {
+  display: flex;
+  position: absolute;
+  gap: 10px;
+  margin-top: 30px;
+  margin-left: 350px;
+  cursor: pointer;
+}
+
+.facebook{
+  margin-left: 50px;
+}
+
+.instagram{
+  margin-left: 50px;
+}
+
+.envelope{
+  margin-left: 50px;
+}
+
+.footer-social h4{
+  font-size: 1.2rem;
+  margin-top: 50px;
+  margin-left: 550px;
+}
+
+.footer-bottom {
+  position: absolute;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #aaa;
+  margin-top: 70px;
+  margin-left: 30px;
+}
