--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -21,6 +21,7 @@ body {
   padding: 10px 20px;
   background-color: #fff;
   border-bottom: 3px solid #aaa;
+  position: relative;
  
 }
 
@@ -28,6 +29,7 @@ body {
   display: flex;
   align-items: center;
   gap: 15px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .logo {
@@ -47,10 +49,10 @@ body {
 .navbar-center {
   display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: right
   flex: 1;
   gap: 100px;
-  margin-left: 200px;
+  margin-right: 100px;
 }
 
 .navbar-center a {
@@ -305,7 +307,7 @@ body {
     font-weight: bold;
     font-style: italic; 
     line-height: 1; 
-    margin: px; 
+    margin: 10px; 
   }
   
   .navbar-center {
@@ -313,7 +315,7 @@ body {
     align-items: center;
     justify-content: right;
     flex: 1;
-    gap: 10px;
+    gap: 100px;
     margin-right: 100px;
   }
   
