--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -21,7 +21,7 @@ body {
   padding: 10px 20px;
   background-color: #fff;
   border-bottom: 3px solid #aaa;
-  position: relative;
+
  
 }
 
@@ -92,6 +92,7 @@ body {
   margin-bottom: 20px;
   align-self: center;
 }
+
 .left-section h2 {
   position: absolute;
   font-size: 15px;
@@ -216,6 +217,7 @@ body {
   padding: 40px;
   margin-top: 50px;
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 .footer-container {
@@ -330,13 +332,32 @@ body {
     font-size: 1rem;
     transition: color 0.2s;
   }
-
+  
+  .login-line {
+    flex-direction: row;
+    width: 40px;
+    height: 3px;
+    background-color: #B384CE;
+    margin-right: 8px;
+    margin-bottom: 20px;
+    align-self: center;
+  }
+  .left-section h2 {
+    position: absolute;
+    font-size: 15px;
+    font-weight: normal;
+    color: rgb(0, 0, 0);
+    line-height: 2.7;
+    margin-left: 50px;
+    top: 163px;
+  }
+  
   .login-box {
     background-color: white;
     color: black;
     padding: 30px;
     border-radius: 10px;
-    margin-left: 30px;
+    margin-left: 20px;
     width: 400px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     text-align: left;
@@ -346,7 +367,7 @@ body {
     font-size: 20px;
     font-weight: lighter;
     color: rgb(0, 0, 0);
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     text-align: left;
   }
   
