--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -239,67 +239,102 @@ nav a:hover {
 
 /* Footer */
 .footer {
+    width: 100%;
+    height: 300px;
     background-color: #333;
     color: #fff;
-    padding: 40px 10%;
-    margin-top: 50px;
+    margin-top: 40px;
   }
-
+  
   .footer-container {
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
-    gap: 30px;
   }
-
-  .footer-about h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    margin-left: 50px;
+  
+  .footer-links{
+    margin-left: 40px;
+    margin-top: 50px;
   }
-
+  
   .footer-links h3{
     font-size: 1.2rem;
-    margin-bottom: 10px;
     text-align: left;
+    margin-bottom: 10px;    
   }
-
+  
   .footer-links ul {
     list-style-type: none;
-    padding: 0;
+    margin-top: 30px;
   }
-
-  .footer-links ul li {
-    margin-bottom: 5px; 
-  }
-
+  
   .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-links a{
+    margin-top: 20px;
+  }
+  
+  .footer-service{
+    margin-top: 50px;
+    margin-left: 150px;
+  }
+  
+  .footer-service h3{
+    font-size: 1.2rem;
+    text-align: left;
+  }
+  
+  .footer-service ul{
+    list-style-type: none;
+    padding: 10px;
+    margin-top: 30px;
+  }
+  
+  .footer-service ul li a {
     color: #ccc;
     text-decoration: double;
     font-size: 1rem;
     transition: color 0.3s ease;
     cursor: pointer;
-    margin-bottom: 5px;
   }
-
-  .footer-links a{
-    margin-left: 25px;
-  }
-
+  
   .footer-social .social-icons {
     display: flex;
-    gap: 20px;
+    position: absolute;
+    gap: 10px;
+    margin-top: 30px;
+    margin-left: 350px;
+    cursor: pointer;
   }
-
+  
+  .facebook{
+    margin-left: 50px;
+  }
+  
+  .instagram{
+    margin-left: 50px;
+  }
+  
+  .envelope{
+    margin-left: 50px;
+  }
+  
   .footer-social h4{
     font-size: 1.2rem;
-    margin-bottom: 10px;
-    margin-left: 150px;
+    margin-top: 50px;
+    margin-left: 550px;
   }
-
+  
   .footer-bottom {
+    position: absolute;
     text-align: center;
-    margin-top: 20px;
     font-size: 0.9rem;
     color: #aaa;
+    margin-top: 70px;
+    margin-left: 30px;
   }
