--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -389,7 +389,4 @@ body {
   .dropdown.show .dropdown-menu {
     display: block; /* Tampilkan menu dropdown saat dropdown aktif */
   }
-
- 
-
-    
+}
