--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -107,7 +107,6 @@
 .pic {
   width: 400px;
   height: 350px;
-  margin-right: 20px;
   border-radius: 8px; 
 }
 
@@ -203,101 +202,78 @@
     background-color: rgb(228, 220, 220);
   }
 
-.footer {
-  width: 100%;
-  height: 300px;
-  background-color: #333;
-  color: #fff;
-}
-
-.footer-container {
-  display: flex;
-  align-items: flex-start;
-}
-
-.footer-links{
-  margin-left: 40px;
-  margin-top: 50px;
-}
-
-.footer-links h3{
-  font-size: 1.2rem;
-  text-align: left;
-  margin-bottom: 10px;    
-}
-
-.footer-links ul {
-  list-style-type: none;
-}
-
-.footer-links ul li a {
-  color: #ccc;
-  text-decoration: double;
-  font-size: 1.1rem;
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.footer-links a{
-  margin-top: 20px;
-}
-
-.footer-service{
-  margin-top: 50px;
-  margin-left: 150px;
-}
-
-.footer-service h3{
-  font-size: 1.2rem;
-  text-align: left;
-}
-
-.footer-service ul{
-  list-style-type: none;
-  padding: 10px;
-}
-
-.footer-service ul li a {
-  color: #ccc;
-  text-decoration: double;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.footer-social {
-  display: flex;
-  flex-direction: column;
-  margin-left: 550px;
-  gap: 10px;
-  cursor: pointer;
-}
-
-.social-icons {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  cursor: pointer;
+  .footer {
+    width: 100%;
+    height: 300px;
+    background-color: #333;
+    color: #fff;
+    padding: 40px 40px;
+  }
   
-}
-.call .envelope{
-  text-align: left;
-  margin-left: 550px;
-}
-
-.footer-social h4{
-  font-size: 1.2rem;
-  margin-top: 50px;
-}
-
-.footer-bottom {
-  position: absolute;
-  text-align: center;
-  font-size: 0.9rem;
-  color: #aaa;
-  margin-top: 70px;
-  margin-left: 30px;
-}
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-links h3{
+    font-size: 1.2rem;
+    margin-bottom: 10px;    
+  }
+  
+  .footer-links ul {
+    list-style-type: none;
+  }
+  
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-service h3{
+    font-size: 1.2rem;
+    margin-bottom: 10px;  
+  }
+  
+  .footer-service ul{
+    list-style-type: none;
+  }
+  
+  .footer-service ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 1.2rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #aaa;
+    margin-top: 100px;
+  }
 @media (max-width:800px) {
   .navbar-center {
     display: none; /* Sembunyikan menu utama */
@@ -327,5 +303,93 @@
     padding-top: 20px;
     margin: 0;
     width: 100%;
+  }
+}
+@media (max-width:450px) {
+  .content{
+    padding: 20px;
+  }
+
+  .box-body {
+    border: 1px solid #000;
+    border-radius: 8px;
+    padding: 15px;
+    margin-top: 15px;
+    width: 370px;
+    height: 200px; 
+  }
+
+  .footer {
+    width: 100%;
+    height: auto;
+    background-color: #333;
+    color: #fff;
+    padding: 40px 40px;
+  }
+  
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .footer-links h3{
+    font-size: 1rem;
+    margin-bottom: 10px;    
+  }
+  
+  .footer-links ul {
+    list-style-type: none;
+  }
+  
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-service h3{
+    font-size: 1rem;
+    margin-bottom: 10px;  
+  }
+  
+  .footer-service ul{
+    list-style-type: none;
+  }
+  
+  .footer-service ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 0.8rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 1rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #aaa;
+    margin-top: 20px;
   }
 }
